syntax = "proto3";

package libops.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "libops/v1/options/audit.proto";
import "libops/v1/options/scope.proto";
import "libops/v1/common/types.proto";

option go_package = "github.com/libops/platform/proto/libops/v1;libopsv1";

// ==============================================================================
// SERVICES
// ==============================================================================

// OrganizationSecretService manages organization-level secrets
service OrganizationSecretService {
  // Create an organization secret
  rpc CreateOrganizationSecret(CreateOrganizationSecretRequest) returns (CreateOrganizationSecretResponse) {
    option (google.api.http) = {
      post: "/v1/organizations/{organization_id}/secrets"
      body: "*"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_ORGANIZATION
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      parent_resource_id_field: "organization_id"
      parent_resource: RESOURCE_TYPE_ORGANIZATION};
  }

  // Get an organization secret
  rpc GetOrganizationSecret(GetOrganizationSecretRequest) returns (GetOrganizationSecretResponse) {
    option (google.api.http) = {
      get: "/v1/organizations/{organization_id}/secrets/{secret_id}"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_ORGANIZATION
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "organization_id"};
  }

  // List organization secrets
  rpc ListOrganizationSecrets(ListOrganizationSecretsRequest) returns (ListOrganizationSecretsResponse) {
    option (google.api.http) = {
      get: "/v1/organizations/{organization_id}/secrets"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_ORGANIZATION
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "organization_id"};
  }

  // Update an organization secret
  rpc UpdateOrganizationSecret(UpdateOrganizationSecretRequest) returns (UpdateOrganizationSecretResponse) {
    option (google.api.http) = {
      put: "/v1/organizations/{organization_id}/secrets/{secret_id}"
      body: "*"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_ORGANIZATION
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "organization_id"};
  }

  // Delete an organization secret
  rpc DeleteOrganizationSecret(DeleteOrganizationSecretRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/organizations/{organization_id}/secrets/{secret_id}"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_ORGANIZATION
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "organization_id"};
  }
}

// ProjectSecretService manages project-level secrets
service ProjectSecretService {
  // Create a project secret
  rpc CreateProjectSecret(CreateProjectSecretRequest) returns (CreateProjectSecretResponse) {
    option (google.api.http) = {
      post: "/v1/projects/{project_id}/secrets"
      body: "*"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_PROJECT
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      parent_resource_id_field: "project_id"
      parent_resource: RESOURCE_TYPE_PROJECT};
  }

  // Get a project secret
  rpc GetProjectSecret(GetProjectSecretRequest) returns (GetProjectSecretResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/secrets/{secret_id}"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_PROJECT
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "project_id"};
  }

  // List a project's secrets
  rpc ListProjectSecrets(ListProjectSecretsRequest) returns (ListProjectSecretsResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/secrets"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_PROJECT
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "project_id"};
  }

  // Update a project secret
  rpc UpdateProjectSecret(UpdateProjectSecretRequest) returns (UpdateProjectSecretResponse) {
    option (google.api.http) = {
      put: "/v1/projects/{project_id}/secrets/{secret_id}"
      body: "*"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_PROJECT
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "project_id"};
  }

  // Delete a project secret
  rpc DeleteProjectSecret(DeleteProjectSecretRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/projects/{project_id}/secrets/{secret_id}"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_PROJECT
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "project_id"};
  }
}

// SiteSecretService manages site-level secrets
service SiteSecretService {
  // Create a site secret
  rpc CreateSiteSecret(CreateSiteSecretRequest) returns (CreateSiteSecretResponse) {
    option (google.api.http) = {
      post: "/v1/sites/{site_id}/secrets"
      body: "*"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_SITE
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      parent_resource_id_field: "site_id"
      parent_resource: RESOURCE_TYPE_SITE};
  }

  // Get a site secret
  rpc GetSiteSecret(GetSiteSecretRequest) returns (GetSiteSecretResponse) {
    option (google.api.http) = {
      get: "/v1/sites/{site_id}/secrets/{secret_id}"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_SITE
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "site_id"};
  }

  // List a site's secrets
  rpc ListSiteSecrets(ListSiteSecretsRequest) returns (ListSiteSecretsResponse) {
    option (google.api.http) = {
      get: "/v1/sites/{site_id}/secrets"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_SITE
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "site_id"};
  }

  // Update a site secret
  rpc UpdateSiteSecret(UpdateSiteSecretRequest) returns (UpdateSiteSecretResponse) {
    option (google.api.http) = {
      put: "/v1/sites/{site_id}/secrets/{secret_id}"
      body: "*"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_SITE
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "site_id"};
  }

  // Delete a site secret
  rpc DeleteSiteSecret(DeleteSiteSecretRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/sites/{site_id}/secrets/{secret_id}"
    };
    option (libops.v1.options.required_scope) = {
      resource: RESOURCE_TYPE_SITE
      level: ACCESS_LEVEL_WRITE
      allow_parent_access: true
      oauth_scopes: "manage_secrets"
      resource_id_field: "site_id"};
  }
}

// ==============================================================================
// MESSAGES - Common
// ==============================================================================

message OrganizationSecret {
  string secret_id = 1;      // UUID
  string organization_id = 2;    // UUID
  string name = 3;           // Environment variable name (e.g., DATABASE_URL)
  common.Status status = 4;
}

message ProjectSecret {
  string secret_id = 1;      // UUID
  string project_id = 2;     // UUID
  string name = 3;           // Environment variable name
  common.Status status = 4;
}

message SiteSecret {
  string secret_id = 1;      // UUID
  string site_id = 2;        // UUID
  string name = 3;           // Environment variable name
  common.Status status = 4;
}

// ==============================================================================
// MESSAGES - Organization Secrets
// ==============================================================================

message CreateOrganizationSecretRequest {
  string organization_id = 1;
  string name = 2;           // e.g., "DATABASE_URL"
  string value = 3 [(libops.v1.options.sensitive) = true];  // Secret value (redacted in audit logs)
}

message CreateOrganizationSecretResponse {
  OrganizationSecret secret = 1;
}

message GetOrganizationSecretRequest {
  string organization_id = 1;
  string secret_id = 2;
}

message GetOrganizationSecretResponse {
  OrganizationSecret secret = 1;
}

message ListOrganizationSecretsRequest {
  string organization_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListOrganizationSecretsResponse {
  repeated OrganizationSecret secrets = 1;
  string next_page_token = 2;
}

message UpdateOrganizationSecretRequest {
  string organization_id = 1;
  string secret_id = 2;
  optional string value = 3 [(libops.v1.options.sensitive) = true];  // Updated secret value
  google.protobuf.FieldMask update_mask = 4;
}

message UpdateOrganizationSecretResponse {
  OrganizationSecret secret = 1;
}

message DeleteOrganizationSecretRequest {
  string organization_id = 1;
  string secret_id = 2;
}

// ==============================================================================
// MESSAGES - Project Secrets
// ==============================================================================

message CreateProjectSecretRequest {
  string project_id = 1;
  string name = 2;
  string value = 3 [(libops.v1.options.sensitive) = true];
}

message CreateProjectSecretResponse {
  ProjectSecret secret = 1;
}

message GetProjectSecretRequest {
  string project_id = 1;
  string secret_id = 2;
}

message GetProjectSecretResponse {
  ProjectSecret secret = 1;
}

message ListProjectSecretsRequest {
  string project_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListProjectSecretsResponse {
  repeated ProjectSecret secrets = 1;
  string next_page_token = 2;
}

message UpdateProjectSecretRequest {
  string project_id = 1;
  string secret_id = 2;
  optional string value = 3 [(libops.v1.options.sensitive) = true];
  google.protobuf.FieldMask update_mask = 4;
}

message UpdateProjectSecretResponse {
  ProjectSecret secret = 1;
}

message DeleteProjectSecretRequest {
  string project_id = 1;
  string secret_id = 2;
}

// ==============================================================================
// MESSAGES - Site Secrets
// ==============================================================================

message CreateSiteSecretRequest {
  string site_id = 1;
  string name = 2;
  string value = 3 [(libops.v1.options.sensitive) = true];
}

message CreateSiteSecretResponse {
  SiteSecret secret = 1;
}

message GetSiteSecretRequest {
  string site_id = 1;
  string secret_id = 2;
}

message GetSiteSecretResponse {
  SiteSecret secret = 1;
}

message ListSiteSecretsRequest {
  string site_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListSiteSecretsResponse {
  repeated SiteSecret secrets = 1;
  string next_page_token = 2;
}

message UpdateSiteSecretRequest {
  string site_id = 1;
  string secret_id = 2;
  optional string value = 3 [(libops.v1.options.sensitive) = true];
  google.protobuf.FieldMask update_mask = 4;
}

message UpdateSiteSecretResponse {
  SiteSecret secret = 1;
}

message DeleteSiteSecretRequest {
  string site_id = 1;
  string secret_id = 2;
}
